[gd_scene load_steps=15 format=3 uid="uid://mnnshu4tgn23"]

[ext_resource type="Script" path="res://level_1_scene/level_1.gd" id="1_sp28q"]
[ext_resource type="PackedScene" uid="uid://d0koof6k8sdrl" path="res://items/brick.tscn" id="1_w2a4l"]
[ext_resource type="Script" path="res://level_1_scene/Camera2Dlevel1.gd" id="2_6nlhn"]
[ext_resource type="Script" path="res://level_1_scene/Label1.gd" id="2_shrda"]
[ext_resource type="Script" path="res://level_1_scene/Area2D3.gd" id="2_tm8gn"]
[ext_resource type="Script" path="res://level_1_scene/Labeltimer.gd" id="3_mwaue"]
[ext_resource type="Script" path="res://level_1_scene/Label2.gd" id="3_nnlmb"]
[ext_resource type="Script" path="res://level_1_scene/Label2timer.gd" id="4_1kved"]
[ext_resource type="AudioStream" uid="uid://b6ujxsdp40a7k" path="res://music/demogfarmsong - Copy.wav" id="9_117b3"]
[ext_resource type="Script" path="res://level_1_scene/OB.gd" id="10_pkc4m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6kc7l"]
size = Vector2(119.75, 49)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8w4oo"]
size = Vector2(591.5, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qdt6s"]
size = Vector2(148.5, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4rovb"]
size = Vector2(3236, 356)

[node name="level_1" type="Node2D"]
script = ExtResource("1_sp28q")

[node name="Node2D" type="TileMap" parent="."]
position = Vector2(545, 163)
format = 2

[node name="Camera2D" type="Camera2D" parent="." node_paths=PackedStringArray("timer", "shake_timer")]
position = Vector2(560, 294)
script = ExtResource("2_6nlhn")
timer = NodePath("Timer2")
shake_timer = NodePath("Shake_timer")

[node name="Shake_timer" type="Timer" parent="Camera2D"]
one_shot = true

[node name="Timer2" type="Timer" parent="Camera2D"]
one_shot = true

[node name="Area2D" type="StaticBody2D" parent="."]
position = Vector2(501, 64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(441, 398)
shape = SubResource("RectangleShape2D_6kc7l")

[node name="Area2D5" type="StaticBody2D" parent="."]
position = Vector2(745, 83)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D5"]
position = Vector2(-113, 34)
shape = SubResource("RectangleShape2D_6kc7l")

[node name="Area2D4" type="StaticBody2D" parent="."]
position = Vector2(1017, 149)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D4"]
position = Vector2(1, 10)
shape = SubResource("RectangleShape2D_6kc7l")

[node name="Area2D2" type="StaticBody2D" parent="."]
position = Vector2(297, 460)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(15, 13)
shape = SubResource("RectangleShape2D_8w4oo")

[node name="Area2D3" type="Area2D" parent="." node_paths=PackedStringArray("timer", "timer2")]
position = Vector2(1012, 125)
collision_layer = 7
collision_mask = 7
script = ExtResource("2_tm8gn")
timer = NodePath("Timer")
timer2 = NodePath("Timer2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
position = Vector2(1, 5)
shape = SubResource("RectangleShape2D_qdt6s")

[node name="Label" type="Label" parent="Area2D3/CollisionShape2D" node_paths=PackedStringArray("timer")]
offset_left = -6.0
offset_top = -58.0
offset_right = 200.0
offset_bottom = 29.0
script = ExtResource("3_mwaue")
timer = NodePath("../../Timer")

[node name="Label2" type="Label" parent="Area2D3/CollisionShape2D" node_paths=PackedStringArray("timer2")]
offset_left = -139.0
offset_top = -93.0
offset_right = 77.0
offset_bottom = -34.0
script = ExtResource("4_1kved")
timer2 = NodePath("../../Timer2")

[node name="Timer" type="Timer" parent="Area2D3"]
one_shot = true

[node name="Timer2" type="Timer" parent="Area2D3"]
one_shot = true

[node name="Label" type="Label" parent="."]
offset_left = 789.0
offset_top = 209.0
offset_right = 1099.0
offset_bottom = 232.0
script = ExtResource("2_shrda")

[node name="Label2" type="Label" parent="."]
offset_left = 1006.0
offset_top = 213.0
offset_right = 1444.0
offset_bottom = 242.0
script = ExtResource("3_nnlmb")

[node name="brick" parent="." instance=ExtResource("1_w2a4l")]
position = Vector2(603, 29)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_117b3")
autoplay = true

[node name="spawnlocations" type="Node2D" parent="."]

[node name="0" type="Node2D" parent="spawnlocations" groups=["PlayerSpawnPoint"]]
position = Vector2(79, 415)

[node name="1" type="Node2D" parent="spawnlocations" groups=["PlayerSpawnPoint"]]
position = Vector2(423, 393)

[node name="OB" type="Area2D" parent="."]
collision_layer = 7
collision_mask = 7
script = ExtResource("10_pkc4m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="OB"]
position = Vector2(598, 1090)
shape = SubResource("RectangleShape2D_4rovb")

[connection signal="char_to_add" from="." to="Camera2D" method="_on_level_1_char_to_add"]
[connection signal="char_to_add" from="." to="Label" method="_on_level_1_char_to_add"]
[connection signal="char_to_add" from="." to="Label2" method="_on_level_1_char_to_add"]
[connection signal="char_to_add" from="." to="brick" method="_on_level_1_char_to_add"]
[connection signal="char_to_add" from="." to="OB" method="_on_level_1_char_to_add"]
[connection signal="timeout" from="Camera2D/Shake_timer" to="Camera2D" method="_on_shake_timer_timeout"]
[connection signal="timeout" from="Camera2D/Timer2" to="Camera2D" method="_on_timer_2_timeout"]
[connection signal="body_entered" from="Area2D3" to="Area2D3" method="_on_body_entered"]
[connection signal="body_exited" from="Area2D3" to="Area2D3" method="_on_body_exited"]
[connection signal="timeout" from="Area2D3/Timer" to="Label" method="_on_timer_timeout"]
[connection signal="timeout" from="Area2D3/Timer2" to="Label2" method="_on_timer_2_timeout"]
[connection signal="body_entered" from="OB" to="OB" method="_on_body_entered"]
